--- a/posts/22.md
+++ b/posts/22.md
@@ -3,7 +3,7 @@ title: "A 22nd Birthday Reflection"
 date: "2019-04-23"
 ---
 
-Yesterday, I turned 22. You could say I had a mini quarter-life crisis. Most people retire at about age 60. That would put me at a third of the way through my career. It's also not news that most people lay the foundations of their career in their 20s and early 30s, leading to an average peak in salary in their 40s.
+I recently turned 22. You could say I had a mini quarter-life crisis. Most people retire at about age 60. That would put me at a third of the way through my career. It's also not news that most people lay the foundations of their career in their 20s and early 30s, leading to an average peak in salary in their 40s.
 
 > As Meg Jay, Ph.D., author of the Defining Decade says,
 "Eighty percent of life's most defining moments take place by age thirty-five. Two-thirds of lifetime wage growth happens in the first ten years of a career."
@@ -21,7 +21,5 @@ What changes can I make to my current way of living to minimize future regret? I
 3. Take risks. When I'm in my 30s and 40s, I may be married and have kids. I won't have the time to take large career risks such as starting a company or joining an early-stage startup. If I don't try to start my own company in my 20s, I know it will be the biggest regret of my life. I am full of energy, time, and vigor right now. I should take advantage of it. From now on, I will be taking more career risks.
 
 > It’s often easier to take risks early in your career; you don’t have much to lose, and you potentially have a lot to gain. Once you’ve gotten yourself to a point where you have your basic obligations covered you should try to make it easy to take risks. Look for small bets you can make where you lose 1x if you’re wrong but make 100x if it works. Then make a bigger bet in that direction. - [Sam Altman, chairman of YCombinator and co-chairman of OpenAI](http://blog.samaltman.com/)
-
-Also, happy birthday to you too, Sam!
 
 If there is one thing that I gained from reflecting on my current state, it is to live each moment with purpose.
