--- a/posts/2022.md
+++ b/posts/2022.md
@@ -36,7 +36,7 @@ _May - Sep 2022_
 
 16. 🏠 Moved to SF, Hayes (v.m.)
 17. 🪩 1st music festival at EDC Las Vegas (v.m., v.h.+)
-18. ❤️ Met LH
+18. ❤️ Fell in love (l.h.)
 19. 💪🏻 1st muscle-up
 20. 🪩 Outside Lands and Portola Music Festivals (l.h., d.f., j.l., v.m.)
 21. ⚓️ Got my 1st tattoo
