--- a/posts/2022.md
+++ b/posts/2022.md
@@ -16,7 +16,7 @@ _Nov 2021 - Jan 2022_
 1. 💼 Left Virtually
 2. ✈️ Visited Austin (s.j., h.g., g.g.) and Boston (p.m., n.t.)
 3. ✈️ Explored Iceland (r.w.)
-4. 💪🏻 Finished an Ironman Triathlon in Mexico
+4. 💪🏻 Finished a full Ironman Triathlon in Mexico
 5. 💼 Joined Fractional
 6. 🏕️ Camped for the 1st time at Big Sur (l.c.)
 7. 💔 Broke up with GF
