--- a/posts/2022.md
+++ b/posts/2022.md
@@ -14,8 +14,8 @@ Below are the most significants events of my life from the past year or so, in c
 _Nov 2021 - Jan 2022_
 
 1. 💼 Left Virtually
-2. ✈️ Visited Austin (s.j., h.g., g.g.) and Boston (p.m., n.t.)
-3. ✈️ Explored Iceland (r.w.)
+2. ✈️ Visited friends in Austin (s.j., h.g., g.g.) and Boston (p.m., n.t.)
+3. ✈️ Explored Iceland with my undergrad CS professor and friend
 4. 💪🏻 Finished a full Ironman Triathlon in Mexico
 5. 💼 Joined Fractional
 6. 🏕️ Camped for the 1st time at Big Sur (l.c.)
@@ -25,10 +25,10 @@ _Feb – Apr 2022_
 
 8. 🏠 Moved to a hacker house in SF, Nob Hill
 9. 🫂 Made some close friends (v.m., a.g., h.j., l.s., w.g., s.k.+)
-10. 🎿 Skied at Lake Tahoe (l.c., v.m., a.w., d.h.+)
+10. 🎿 Skied at Lake Tahoe with friends
 11. 👁️ Got laser eye surgery
 12. 💪🏻 Benched 2 plates
-13. ✈️ Visited Miami for a cousin’s wedding (h.l.+)
+13. ✈️ Attended a cousin’s wedding in Miami
 14. 🏚️ Started managing a whole-house remodel
 15. 🎂 Turned 25
 
@@ -36,7 +36,7 @@ _May - Sep 2022_
 
 16. 🏠 Moved to SF, Hayes (v.m.)
 17. 🪩 1st music festival at EDC Las Vegas (v.m., v.h.+)
-18. ❤️ Fell in love (l.h.)
+18. ❤️ Fell in love
 19. 💪🏻 1st muscle-up
 20. 🪩 Outside Lands and Portola Music Festivals (l.h., d.f., j.l., v.m.)
 21. ⚓️ Got my 1st tattoo
