--- a/posts/2022.md
+++ b/posts/2022.md
@@ -39,7 +39,7 @@ _May - Sep 2022_
 18. ❤️ Fell in love
 19. 💪🏻 1st muscle-up
 20. 🪩 Outside Lands and Portola Music Festivals (l.h., d.f., j.l., v.m.)
-21. ⚓️ Got my 1st tattoo
+21. ⚓️ Got my 1st (Ironman) tattoo
 22. 💡 Explored startup ideas in climate, crypto, fusion, HR, and Ag
 
 _Oct - Dec 2022_
@@ -71,6 +71,6 @@ All in all, I'm super thankful for everything, especially my health and the peop
 Wesley Tian
 
 **Previous blog post: [San Francisco](/posts/sf)**  
-**Next blog post: My Goals for 2023+**
+**Next blog post: My Goals for 2023+ / Thoughts on AI**
 
 _\*Technically like the past 14 months_
