--- a/posts/2022.md
+++ b/posts/2022.md
@@ -23,7 +23,7 @@ _Nov 2021 - Jan 2022_
 
 _Feb – Apr 2022_
 
-8. 🏠 Moved to a hacker house in SF, Nob Hill
+8. 🏠 Moved to a hacker house in SF, Nob Hill from south bay area
 9. 🫂 Made some close friends (v.m., a.g., h.j., l.s., w.g., s.k.+)
 10. 🎿 Skied at Lake Tahoe with friends
 11. 👁️ Got laser eye surgery
