--- a/posts/2022.md
+++ b/posts/2022.md
@@ -3,6 +3,8 @@ title: "2022: The Best Year* of My Life"
 date: "2022-12-08"
 ---
 
+_\*technically like the past 14 months_
+
 **–and it's not even over yet!**
 
 Sometimes life just passes by and you forget to stop, take a deep breath, and reflect. I feel like that's recently been the case for me as I moved into a hacker house, got into a serious new relationship, and started a company.
@@ -70,7 +72,8 @@ All in all, I'm super thankful for everything, especially my health and the peop
 
 Wesley Tian
 
-**Previous blog post: [San Francisco](/posts/sf)**  
-**Next blog post: My Goals for 2023+ / Thoughts on AI**
+--
 
-_\*Technically like the past 14 months_
+Previous blog post: [San Francisco](/posts/sf)  
+Next blog post: My Goals for 2023+ / Thoughts on AI  
+[Click here to go home](/)
