--- a/posts/2022.md
+++ b/posts/2022.md
@@ -68,7 +68,7 @@ _now – end of Dec 2022_
 <span style="color:black">💡 Startup ideas explored:</span> 50?  
 <span style="color:black">👥 Awesome people met:</span> 100?
 
-All in all, I'm super thankful for everything, especially my health and the people in my life. If we met in person or interacted in any way this year, thank you being a part of it. I hope every year is just as exciting and wonderful as this one. I'd honestly probably be fine if the next year is less eventful, haha. This year was certainly a lot. I hope you enjoyed this post and best wishes for 2023!
+All in all, I'm super thankful for everything, especially my health and the people in my life. If we met in person or interacted in any way this year, thank you for being a part of it. I hope every year is just as exciting and wonderful as this one. I'd probably be fine if the next year is less eventful though, haha. This year was certainly a lot. I hope you enjoyed this post and best wishes for 2023!
 
 Wesley Tian
 
