--- a/posts/2022.md
+++ b/posts/2022.md
@@ -47,9 +47,9 @@ _May - Sep 2022_
 _Oct - Dec 2022_
 
 22. 💼 Left Fractional
-23. 💼 Started an AI company (**[Aragon](https://www.aragon.ai/?src=wesleytian)**) with a friend
+23. 💼 Started an AI company (**[Aragon.ai](https://www.aragon.ai/?src=wesleytian)**) with a friend
 24. 👥 Met lots of cool, smart, and awesome people (founders, VCs, etc.)
-25. 🤑 Started generating revenue with Aragon's **[AI Avatars](https://www.aragon.ai/avatars?src=wesleytian)**
+25. 🤑 Started generating revenue with Aragon.ai's **[AI Avatars](https://www.aragon.ai/avatars?src=wesleytian)**
 
 _now – end of Dec 2022_
 
